# restGDF

./: .gitignore  .gitmodules  2  Home.py  LICENSE  ]  arcgisapiTest.py  config.json  git_prep.sh  hello.py  main.py  plainTest.py  pyproject.toml  pyright_setup.sh  pyrightconfig.json  pytest.ini  pywr_test.py  requirements.txt  restapiTest.py  temp.inp  temp.rpt  wntr_test.py
data/: test1.inp
exmaples/: testHelper.py
pages/: 6_📦_Web_Map_Service_2.py  6_📦_Web_Map_Service_3.py  6_📦_Web_Map_Service_4.py  runStreamli.sh
src/: MapData.py  data.py  downloader.py  restGDF.py  utils.py
tests/: test_restGDF.py
